add: added all controllers
