# dto/create_account.go
@@ -1,0 +1,5 @@
+package dto
+
+type CreateAccountRequest struct {
+	Login string `json:"login" binding:"required"`
+}
