# dto/dep_with_request.go
@@ -1,0 +1,6 @@
+package dto
+
+type DepWithRequest struct {
+	Id     string  `json:"id" binding:"required"`
+	Amount float64 `json:"amount" binding:"required"`
+}
