# dto/friends_request.go
@@ -1,6 +1,6 @@
 package dto
 
-type AddFriendsRequest struct {
+type FriendsRequest struct {
 	UserLogin   string `json:"user_login" binding:"required"`
 	FriendLogin string `json:"friend_login" binding:"required"`
 }
